--- a/dubbo-admin/src/main/resources/application.properties
+++ b/dubbo-admin/src/main/resources/application.properties
@@ -15,13 +15,16 @@
 # limitations under the License.
 #
 
-server.port=7001
+#\u670D\u52A1\u7AEF\u53E3
+server.port=9090
 spring.velocity.cache=false
 spring.velocity.charset=UTF-8
 spring.velocity.layout-url=/templates/default.vm
 spring.messages.fallback-to-system-locale=false
 spring.messages.basename=i18n/message
+#\u7BA1\u7406\u5458\u767B\u5F55\u5BC6\u7801
 spring.root.password=root
+#\u6E38\u5BA2\u767B\u5F55\u5BC6\u7801
 spring.guest.password=guest
-
-dubbo.registry.address=zookeeper://127.0.0.1:2181
+#\u6CE8\u518C\u4E2D\u5FC3\u5730\u5740
+dubbo.registry.address=zookeeper://116.196.113.170:2181?backup=116.196.113.170:2182,116.196.113.170:2183
